fixed the problem of the too big footer

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,6 +1,6 @@
 footer{
     width: 94%;
-    height: auto;
+    height:  auto;
     background-color: darkblue;
     color: lightgrey;
     padding: 0% 3%;
@@ -10,7 +10,10 @@ footer{
     bottom: 0;
     text-align: center;
     position: absolute;
-    top: 86%;
+    top: 89%;
+}
+p{
+    font-size: 80%;
 }
 
 /*Style des Links für die Kontakt Seite*/
